Solving the session leaking from memory issue

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "express-fileupload": "^1.2.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.9.2",
+    "heroku": "^7.65.0",
     "http": "0.0.1-security",
     "imgbb-uploader": "^1.5.0",
     "jquery": "^3.6.1",
+    "memorystore": "^1.6.7",
     "method-override": "^3.0.0",
     "mime-types": "^2.1.32",
     "mongoose": "^6.6.1",
